objects/Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Details</relationshipLabel>
        <relationshipName>Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comment__c</fullName>
        <label>Additional Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Order_Number__c</fullName>
        <label>Master Order Number</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <label>Order Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>VBI</fullName>
                </value>
                <value>
                    <fullName>VBI + OT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <label>Order Detail</label>
    <nameField>
        <displayFormat>OD-{00000000}</displayFormat>
        <label>Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Details</pluralLabel>
    <recordTypes>
        <fullName>Cancel_Disconnect_Reason</fullName>
        <active>true</active>
        <label>Cancel Disconnect Reason</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>